k8s/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
